--- a/Other/Производная.ipynb
+++ b/Other/Производная.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOYrsJWnvF4ayOXBigfO8Jq",
+      "authorship_tag": "ABX9TyN/LBnGSE5oWNx/iOC43KvF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -109,9 +109,18 @@
         "\n",
         "     $f'(x) = 2x + 3$\n",
         "\n",
+        " - Производная произведения:\n",
+        "      \n",
+        "     $f(x) = x * sin(x)$\n",
+        "\n",
+        "     $f'(x) = 1 * sin(x) + x * cos(x) = sin(x) + xcos(x)$\n",
+        "\n",
+        "\n",
         "\n",
         "     \n",
-        "\n"
+        "# Как работает производная?\n",
+        "\n",
+        "Производная показывает, как изменяется функция в зависимости от изменения аргумента. Например, в физике, производная координаты по времени даёт скорость, а производная скорости по времени — ускорение.\n"
       ],
       "metadata": {
         "id": "CZmb3v3QB52V"
